--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.sql.init.mode=always
 
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/root?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=Turkey
+spring.datasource.url = jdbc:mysql://localhost:3306/test?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=Turkey
 spring.datasource.username = root
 spring.datasource.password = 123456
 spring.sql.init.platform = mysql
@@ -17,8 +17,8 @@ spring.sql.init.platform = mysql
 # configuration email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=yildizcihangir35@gmail.com
-spring.mail.password=Fen.1905
+spring.mail.username=eagcatest@gmail.com
+spring.mail.password=testmail
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
